--- a/client/index.html
+++ b/client/index.html
@@ -63,6 +63,7 @@
           <!-- injector:js -->
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/newsletter-builder/newsletter-builder.service.js"></script>
           <script src="app/newsletter-canvas/newsletter-canvas.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <!-- endinjector -->
