zoom out working

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -3,6 +3,7 @@
 <canvas newsletter-canvas class="news-canvas">Your Browser doesn't support Canvas</canvas>
 
 <div class="article-sections">
+<button ng-click="currentPage.zoomOut()" ng-show="currentPage.selected()" class="btn btn-default">Zoom Out</button>
 <ul class="list-unstyled">
 <li ng-repeat="section in currentPage.articleSections"><a ng-click="currentPage.centerOnArticle(section.id)">{{section.id}}</a></li>
 </ul>
